# serializer version: 1
# name: TestItouStaffLogin.test_login_shows_list_of_devices
  '''
  <div class="c-form mb-5">
      <h2>
          Double authentification
      </h2>
      <div class="alert alert-info" role="status">
          <div class="row">
              <div class="col-auto pe-0">
                  <i aria-hidden="true" class="ri-information-line ri-xl text-info">
                  </i>
              </div>
              <div class="col">
                  <p class="mb-2">
                      <strong>
                          Ouvrez l’un de vos appareils configurés et recopiez le code affiché :
                      </strong>
                  </p>
                  <ol class="list-unstyled">
                      <li>
                          Mon appareil
                                              
                                                  –
                                                  Dernière utilisation le
                                                  01 juin 2026 à 12h00
                      </li>
                  </ol>
                  <p class="mb-0">
                      <strong>
                          Vous n’avez plus accès à votre appareil ?
                      </strong>
                      <a class="btn-link" href="/otp/login-with-backup-code">
                          Cliquez ici pour entrer votre code de récupération
                      </a>
                  </p>
              </div>
          </div>
      </div>
      <form class="js-prevent-multiple-submit" method="post">
          <input name="csrfmiddlewaretoken" type="hidden" value="NORMALIZED_CSRF_TOKEN"/>
          <fieldset>
              <div class="form-group form-group-required">
                  <label class="form-label" for="id_otp_token">
                      Entrez le code de validation unique (OTP)
                  </label>
                  <input aria-describedby="id_otp_token_helptext" autocomplete="one-time-code" autofocus="" class="form-control" id="id_otp_token" max_length="6" name="otp_token" required="" type="text"/>
                  <div class="form-text" id="id_otp_token_helptext">
                      Code à 6 chiffres généré par votre application mobile ou votre gestionnaire de mot de passe sur votre ordinateur
                  </div>
              </div>
          </fieldset>
          <div class="row">
              <div class="col-12">
                  <hr class="mb-3"/>
                  <small class="d-inline-block mb-3">
                      * champs obligatoires
                  </small>
                  <div class="form-row align-items-center justify-content-end gx-3">
                      <div class="form-group col-12 col-lg order-3 order-lg-1">
                      </div>
                      <div class="form-group col col-lg-auto order-2 order-lg-3">
                          <button aria-label="Passer à l’étape suivante" class="btn btn-block btn-primary" type="submit">
                              <span>
                                  Valider
                              </span>
                          </button>
                      </div>
                  </div>
              </div>
          </div>
      </form>
  </div>
  
  '''
# ---
# name: test_delete_devices[with_device]
  '''
  <section class="s-section">
      <div class="s-section__container container">
          <div class="s-section__row row">
              <div class="s-section__col col-12">
                  <div class="d-flex flex-column flex-lg-row gap-3 align-items-lg-center justify-content-lg-between mb-3">
                      <h2 class="mb-0">
                          Mes appareils
                      </h2>
                      <div aria-label="Actions sur les collaborateurs" class="d-flex flex-column flex-md-row gap-2 justify-content-md-end" role="group">
                          <a class="btn btn-primary btn-ico" href="/otp/enrollment-step-1">
                              Configurer un
                                  nouvel
                                  appareil
                          </a>
                      </div>
                  </div>
                  <p>
                      Voici la liste de vos appareils configurés :
                  </p>
                  <div class="table-responsive mt-3 mt-md-4">
                      <table class="table table-sm">
                          <caption class="visually-hidden">
                              Liste de vos appareils configurés
                          </caption>
                          <thead>
                              <tr>
                                  <th class="w-50px" scope="col">
                                  </th>
                                  <th scope="col">
                                      Nom
                                  </th>
                                  <th scope="col">
                                      Créé le
                                  </th>
                                  <th scope="col">
                                      Dernière utilisation
                                  </th>
                                  <th class="text-end w-50px" scope="col">
                                      <span class="visually-hidden">
                                          Actions possibles sur les appareils configurés
                                      </span>
                                  </th>
                              </tr>
                          </thead>
                          <tbody>
                              <tr>
                                  <td>
                                      <i aria-label="Vous avez utilisé cet appareil pour vous connecter." class="ri-verified-badge-fill text-success" data-bs-placement="top" data-bs-title="Vous avez utilisé cet appareil pour vous connecter." data-bs-toggle="tooltip">
                                      </i>
                                  </td>
                                  <td>
                                      authenticator
                                  </td>
                                  <td>
                                      11 mars 2025 06:18
                                  </td>
                                  <td>
                                      11 mars 2025 06:20
                                  </td>
                                  <td class="text-end w-50px">
                                      <button aria-label="Supprimer l’appareil authenticator" class="btn btn-sm btn-link disabled" data-bs-placement="top" data-bs-target="#delete_[PK of device_1]_modal" data-bs-title="Impossible de supprimer l’appareil que vous avez utilisé pour vous connecter." data-bs-toggle="tooltip" type="button">
                                          <i aria-hidden="true" class="ri-delete-bin-line fw-normal">
                                          </i>
                                      </button>
                                  </td>
                              </tr>
                              <tr>
                                  <td>
                                  </td>
                                  <td>
                                      bitwarden
                                  </td>
                                  <td>
                                      11 mars 2025 06:19
                                  </td>
                                  <td>
                                      <i class="text-disabled">
                                          jamais
                                      </i>
                                  </td>
                                  <td class="text-end w-50px">
                                      <button aria-label="Supprimer l’appareil bitwarden" class="btn btn-sm btn-link" data-bs-target="#delete_[PK of device_2]_modal" data-bs-toggle="modal" type="button">
                                          <i aria-hidden="true" class="ri-delete-bin-line fw-normal">
                                          </i>
                                      </button>
                                  </td>
                              </tr>
                          </tbody>
                      </table>
                  </div>
              </div>
          </div>
      </div>
  </section>
  
  '''
# ---
# name: test_device_list
  '''
  <section class="s-section">
      <div class="s-section__container container">
          <div class="s-section__row row">
              <div class="s-section__col col-12">
                  <div class="d-flex flex-column flex-lg-row gap-3 align-items-lg-center justify-content-lg-between mb-3">
                      <h2 class="mb-0">
                          Mes appareils
                      </h2>
                      <div aria-label="Actions sur les collaborateurs" class="d-flex flex-column flex-md-row gap-2 justify-content-md-end" role="group">
                          <a class="btn btn-primary btn-ico" href="/otp/enrollment-step-1">
                              Configurer un
                                  nouvel
                                  appareil
                          </a>
                      </div>
                  </div>
                  <p>
                      Voici la liste de vos appareils configurés :
                  </p>
                  <div class="table-responsive mt-3 mt-md-4">
                      <table class="table table-sm">
                          <caption class="visually-hidden">
                              Liste de vos appareils configurés
                          </caption>
                          <thead>
                              <tr>
                                  <th class="w-50px" scope="col">
                                  </th>
                                  <th scope="col">
                                      Nom
                                  </th>
                                  <th scope="col">
                                      Créé le
                                  </th>
                                  <th scope="col">
                                      Dernière utilisation
                                  </th>
                                  <th class="text-end w-50px" scope="col">
                                      <span class="visually-hidden">
                                          Actions possibles sur les appareils configurés
                                      </span>
                                  </th>
                              </tr>
                          </thead>
                          <tbody>
                              <tr>
                                  <td>
                                      <i aria-label="Vous avez utilisé cet appareil pour vous connecter." class="ri-verified-badge-fill text-success" data-bs-placement="top" data-bs-title="Vous avez utilisé cet appareil pour vous connecter." data-bs-toggle="tooltip">
                                      </i>
                                  </td>
                                  <td>
                                      Mon appareil
                                  </td>
                                  <td>
                                      11 mars 2025 06:18
                                  </td>
                                  <td>
                                      11 mars 2025 06:18
                                  </td>
                                  <td class="text-end w-50px">
                                      <button aria-label="Supprimer l’appareil Mon appareil" class="btn btn-sm btn-link disabled" data-bs-placement="top" data-bs-target="#delete_[PK of device]_modal" data-bs-title="Impossible de supprimer l’appareil que vous avez utilisé pour vous connecter." data-bs-toggle="tooltip" type="button">
                                          <i aria-hidden="true" class="ri-delete-bin-line fw-normal">
                                          </i>
                                      </button>
                                  </td>
                              </tr>
                          </tbody>
                      </table>
                  </div>
              </div>
          </div>
      </div>
  </section>
  
  '''
# ---
